# vidtools

./: .gitignore  changelog.md  make  vidtools.cabal
proto/MPlayer/: Paths.hs
proto/Video/MPlayer/: Paths.hs
proto/Video/MediaInfo/: Paths.hs
src/: MPlayer.hs
src/Video/: MIdentify.hs  MPlayer.hs  MediaInfo.hs  Mid.hs
src/Video/MIdentify/: Options.hs
src/Video/MediaInfo/: Paths.hs  TestData.hs
