-- The name of the package.
name:                vidtools

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0

-- A short (one-line) description of the package.
synopsis:            tools for working with videos

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:        >=1.10

library
  ghc-options:        -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:    Video.MPlayer
  exposed-modules:    Video.Mid

  -- modules included in this library but not exported.
  other-modules:      Video.MPlayer.Paths

  default-extensions: FlexibleContexts
                    , LambdaCase
                    , ImportQualifiedPost
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , ScopedTypeVariables
                    , TypeApplications
                    , UnicodeSyntax

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base, containers, data-textual, logging-effect, mtl
                     , optparse-applicative, parsers, text, text-printer
                     , trifecta

                     , base1         >= 0.0.10.0
                     , duration      >= 1.0.1.0
                     , env-plus      >= 1.0.9.0
                     , fpath         >= 1.3.5.0
                     , fstat         >= 1.0.2.26
                     , log-plus      >= 0.0.4.4
                     , mockio        >= 0.0.6.0
                     , mockio-log    >= 0.1.3.1
                     , mockio-plus   >= 0.3.15.0
                     , monadio-plus  >= 2.5.3.0
                     , more-unicode  >= 0.0.19.0
                     , optparse-plus >= 1.3.4.0
                     , stdmain       >= 1.6.3.1
                     , textual-plus  >= 1.1.4.0
                     , trifecta-plus >= 0.0.1.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010


-------------------------------------------------------------------------------

executable mid
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  hs-source-dirs:     bin
  main-is:            mid.hs
  build-depends:      base, vidtools

  default-language:   Haskell2010

-------------------------------------------------------------------------------
